--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
   <div class="section">
     <h2>Encrypt Seed</h2>
     <label>Seed Phrase:</label>
-    <textarea id="seed" rows="3" placeholder="e.g. abandon abandon abandon ..."></textarea>
+    <textarea id="seed" rows="3" placeholder="e.g. blast syrup submit fix impose update same film move deposit gap scissors hungry radio frog error ginger light butter misery maple capital language media ..."></textarea>
 
     <label>Password:</label>
     <input type="password" id="encryptPassword" placeholder="Strong password" />
