--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Bitcoin Seed Vault (NFC Optimized)</title>
+  <title>Bitcoin Seed Vault (NFC Optimized) v.0.3.2</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <script src="qrcode.min.js"></script>
   <style>
